--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <h1>CSV to HTML Table</h1>
 
                 <p>Display any CSV file as a searchable, filterable, pretty HTML table. Done in 100% JavaScript. <a
-                        href="https://github.com/derekeder/csv-to-html-table">Code
+                        href="https://github.com/mohan-balakrishnan/csv-to-html-table">Code
                         on GitHub</a>.</p>
 
                 <p> Here's a table of Health Clinics from the <a href="https://data.cityofchicago.org/browse?q=health%20clinic&sortBy=relevance&utf8=%E2%9C%93">City
@@ -35,8 +35,8 @@
         <footer class="row">
             <div class="col">
                 <hr>
-                <p class="text-right"><a href="https://github.com/derekeder/csv-to-html-table">CSV to HTML Table</a> by
-                    <a href="http://derekeder.com">Derek
+                <p class="text-right"><a href="https://github.com/mohan-balakrishnan/csv-to-html-table">CSV to HTML Table</a> by
+                    <a href="#">Derek
                         Eder</a></p>
             </div>
         </footer>
