--- a/index.html
+++ b/index.html
@@ -25,8 +25,6 @@
                         href="https://github.com/mohan-balakrishnan/csv-to-html-table">Code
                         on GitHub</a>.</p>
 
-                <p> Here's a table of Health Clinics from the <a href="https://data.cityofchicago.org/browse?q=health%20clinic&sortBy=relevance&utf8=%E2%9C%93">City
-                        of Chicago Data Portal</a>.
                 </p>
 
                 <div id="table-container"></div>
@@ -36,8 +34,7 @@
             <div class="col">
                 <hr>
                 <p class="text-right"><a href="https://github.com/mohan-balakrishnan/csv-to-html-table">CSV to HTML Table</a> by
-                    <a href="#">Derek
-                        Eder</a></p>
+                    <a href="#">Sync2tech</a></p>
             </div>
         </footer>
     </div>
