--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>CSV to HTML Table</title>
-    <meta name="author" content="Derek Eder">
-    <meta content="Display any CSV file as a searchable, filterable, pretty HTML table">
+    <title>Sync2tech</title>
+    <meta name="author" content="Sync2tech">
+    <meta content="Sync2tech - Tech Blog Aggregator">
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
@@ -28,7 +28,12 @@
                 </p>
 
                 <div id="table-container"></div>
+                <p>test 2</p>
+                <div id="table-container1"></div>
+                
             </div>
+
+            
         </main>
         <footer class="row">
             <div class="col">
@@ -55,6 +60,29 @@
         CsvToHtmlTable.init({
             csv_path: "data/Health Clinics in Chicago.csv",
             element: "table-container",
+            allow_download: true,
+            csv_options: {
+                separator: ",",
+                delimiter: '"'
+            },
+            datatables_options: {
+                paging: false
+            },
+            custom_formatting: [
+                [4, format_link]
+            ]
+        });
+    </script>
+    <script>
+        function format_link(link) {
+            if (link)
+                return "<a href='" + link + "' target='_blank'>" + link + "</a>";
+            else return "";
+        }
+
+        CsvToHtmlTable.init({
+            csv_path: "data/Health Clinics in Chicago.csv",
+            element: "table-container1",
             allow_download: true,
             csv_options: {
                 separator: ",",
