--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         }
 
         CsvToHtmlTable.init({
-            csv_path: "data/Health Clinics in Chicago.csv",
+            csv_path: "data/ref.csv",
             element: "table-container",
             allow_download: false,
             csv_options: {
@@ -60,7 +60,7 @@
                 paging: false
             },
             custom_formatting: [
-                [4, format_link]
+                [2, format_link]
             ]
         });
     </script>
