--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Sync2tech</title>
+    <meta name="author" content="Sync2tech">
+    <meta content="Sync2tech - Tech Blog Aggregator">
+
+    <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+        integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css">
 <style>
 * {
   box-sizing: border-box;
@@ -83,10 +93,8 @@ body {
 <div class="row">
   <div class="leftcolumn">
     <div class="card">
-      <h2>TITLE HEADING</h2>
-      <h5>Title description, Dec 7, 2017</h5>
-      <p>Some text..</p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+        <h2> CRM</h2>
+        <div id="table-container"></div>
     </div>
     <div class="card">
       <h2>TITLE HEADING</h2>
@@ -95,18 +103,54 @@ body {
       <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
     </div>
   </div>
-  <div class="rightcolumn">
-    <div class="card">
-      <h2>About Me</h2>
-      <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
-    </div>
-   
-  </div>
-</div>
+  <div class="container-fluid">
+    <main class="row">
+        <div class="col">
 
-<div class="footer">
-  <h2>Footer</h2>
+            <!-- <p>Coming soon<a href="https://github.com/mohan-balakrishnan/csv-to-html-table">Code on GitHub</a>.</p> -->
+            </p>
+            <div id="table-container"></div>
+        </div>
+    </main>
+    <footer class="row">
+        <div class="col">
+            <hr>
+            <p class="text-right"><a href="https://github.com/mohan-balakrishnan/csv-to-html-table">Sync2tech</a>
+            </p>
+        </div>
+    </footer>
 </div>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.2.1/js/bootstrap.bundle.min.js"></script>
+<script src="js/jquery.csv.min.js"></script>
+<script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap4.min.js"></script>
+<script src="js/csv_to_html_table.js"></script>
+
+<script>
+    function format_link(link) {
+        if (link)
+            return "<a href='" + link + "' target='_blank'>" + link + "</a>";
+        else return "";
+    }
+
+    CsvToHtmlTable.init({
+        csv_path: "data/ref.csv",
+        element: "table-container",
+        allow_download: false,
+        csv_options: {
+            separator: ",",
+            delimiter: '"'
+        },
+        datatables_options: {
+            paging: false
+        },
+        custom_formatting: [
+            [0, format_link]
+        ]
+    });
+</script>
+
 
 </body>
 </html>
