--- a/test.html
+++ b/test.html
@@ -7,9 +7,30 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-  <div class="container">
-    <div class="row" id="links-container"></div>
-  </div>
+
+  <header>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+      <div class="container">
+        <a class="navbar-brand" href="#">My CSV Data</a>
+      </div>
+    </nav>
+  </header>
+  <br> <br>
+  <main>
+    <div class="container">
+      <div class="row" id="links-container"></div>
+    </div>
+  </main>
+
+  <footer>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 text-center">
+          <p>&copy; 2023 My CSV Data. All rights reserved.</p>
+        </div>
+      </div>
+    </div>
+  </footer>
 
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
@@ -41,7 +62,6 @@
                 <div class="card h-100">
                   <div class="card-body">
                     <h5 class="card-title"><a href="${link.url}" target="_blank">${link.title}</a></h5>
-                    <p class="card-text">${link.title}</p>
                   </div>
                 </div>
               </div>
@@ -57,4 +77,3 @@
 
 </body>
 </html>
-
