--- a/app.html
+++ b/app.html
@@ -6,39 +6,73 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-   
+
     <meta http-equiv="cache-control" content="no-cache" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="-1" />
 </head>
 
 <body>
-
     <header>
         <nav class="navbar navbar-expand-md navbar-dark bg-dark">
             <div class="container">
                 <a class="navbar-brand" href="#">Sync2tech</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">AWS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Azure</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">DevOps</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Automation Testing</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contact</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </nav>
     </header>
+
     <br> <br>
     <main>
         <div class="container">
 
-            <div class="spinner-border" role="status">
-                <span class="sr-only">Loading...</span>
-            </div>
+            <div class="row">
+                <div class="col text-center mt-5">
+                  <div class="spinner-border" role="status">
+                    <span class="sr-only">Loading...</span>
+                  </div>
+                </div>
+              </div>
+            <h2> AWS </h2>
             <div class="row" id="table-body">
 
             </div>
         </div>
     </main>
-    <br>
+    <br> <br>
     <footer>
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
-                    <p>&copy; 2023 My CSV Data. All rights reserved.</p>
+                    <p>&copy; 2023 Sync2tech. All rights reserved.</p>
                 </div>
             </div>
         </div>
@@ -46,6 +80,10 @@
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
     <script>
         $(document).ready(function () {
             const loader = $('.spinner-border');
@@ -86,7 +124,7 @@
 
                         rowHtml += `
               <div class="col-sm-12 col-md-6 col-lg-4">
-                <a style="color:black;"href="${data[i].url}" target="_blank"><br>${data[i].title}</a>
+                <a style="color:black;"href="${data[i].url}" target="_blank">- ${data[i].title}</a>
               </div><br>
             `;
 
