--- a/app.html
+++ b/app.html
@@ -124,7 +124,7 @@
 
                         rowHtml += `
               <div class="col-sm-12 col-md-6 col-lg-4">
-                <a style="color:black;"href="${data[i].url}" target="_blank">- ${data[i].title}</a>
+                <a style="color:black;"href="${data[i].url}" target="_blank"><br>- ${data[i].title}</a>
               </div><br>
             `;
 
